--- a/main_model/constants.ipynb
+++ b/main_model/constants.ipynb
@@ -15,15 +15,9 @@
     "    RT_WLH = 4\n",
     "    RT_LHW = 5\n",
     "    \n",
-    "    ALL = [RT_LWH, RT_HLW, RT_HWL, RT_WHL, RT_WLH, RT_LHW]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    ALL = [RT_LWH, RT_HLW, RT_HWL, RT_WHL, RT_WLH, RT_LHW]\n",
+    "    \n",
+    "    \n",
     "# (x, y, z) --> (length, width, height)\n",
     "class Axis:\n",
     "    LENGTH = 0\n",
@@ -32,13 +26,20 @@
     "    \n",
     "    ALL = [LENGTH, WIDTH, HEIGHT]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6 (tensorflow)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tensorflow"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -50,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
